--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
-    "react-vertical-timeline-component": "^3.0.2"
+    "react-scroll-up-button": "^1.6.4",
+    "react-vertical-timeline-component": "^3.0.2",
+    "reactjs-popup": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
